# fake-word-generator

./: .gitignore  Cargo.toml  README.md
assets/internal/: sonority-graph.ron
assets/resources/: cmudict.0.6-syl_SMALL.txt
src/: connections.rs  graph.rs  ipa.rs  logger.rs  main.rs  phoneme.rs  syllable.rs  syllablize.rs  utils.rs  word.rs  wordgen.rs
