[package]
name = "fake-word-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = [ "derive" ] }
ron = "0.8"
regex = "1.10.3"
indicatif = { version = "0.17.8", features = [ "rayon" ] }
rayon = "1.8.1"
rand = "0.8.5"
# tts_rust = "0.3.5"
tts = "0.26.0"
termion = "3.0.0"
bitflags = "2.4.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa-foundation = "0.1"
core-foundation = "0.9"
libc = "0.2"
objc = { version = "0.2", features = ["exception"] }